--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -74,7 +74,7 @@ data:
       providers:
         oidc:
           production:
-            metadataUrl: ${KEYCLOAK_BASE_URL}/realms/${KEYCLOAK_REALM} #${AUTH_OIDC_METADATA_URL}
+            metadataUrl: ${KEYCLOAK_BASE_URL}/auth/realms/${KEYCLOAK_REALM} #${AUTH_OIDC_METADATA_URL}
             clientId: ${KEYCLOAK_CLIENT_ID}
             clientSecret: ${KEYCLOAK_CLIENT_SECRET}
 
