--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -71,6 +71,8 @@ data:
 
     auth:
       environment: production
+      session:
+        secret: abc123
       providers:
         oidc:
           production:
