Update keycloak integration

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -79,13 +79,17 @@ data:
             metadataUrl: ${KEYCLOAK_BASE_URL}/auth/realms/${KEYCLOAK_REALM}
             clientId: ${KEYCLOAK_CLIENT_ID}
             clientSecret: ${KEYCLOAK_CLIENT_SECRET}
+            prompt: auto
+            signIn:
+              resolvers:
+                - resolver: preferredUsernameMatchingUserEntityName
 
     catalog:
-      rules:
-        - allow: [Component, System,   Group, Resource, Location, Template, API]
-      locations:
-        - type: url
-          target: https://dev.azure.com/pittar-demos/rhdh-demo/_git/software-templates?path=/showcase-templates.yaml
+      # rules:
+      #   - allow: [Component, System,   Group, Resource, Location, Template, API]
+      # locations:
+      #   - type: url
+      #     target: https://dev.azure.com/pittar-demos/rhdh-demo/_git/software-templates?path=/showcase-templates.yaml
       providers:
         keycloakOrg:
           default:
