--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -84,6 +84,7 @@ data:
               resolvers:
                 - resolver: preferredUsernameMatchingUserEntityName
 
+    dangerouslyAllowSignInWithoutUserInCatalog: true
     catalog:
       rules:
         - allow: [Component, System,   Group, Resource, Location, Template, API]
