--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -84,7 +84,8 @@ data:
               resolvers:
                 - resolver: preferredUsernameMatchingUserEntityName
 
-    dangerouslyAllowSignInWithoutUserInCatalog: true
+    dangerouslyAllowSignInWithoutUserInCatalog: false
+
     catalog:
       rules:
         - allow: [Component, System,   Group, Resource, Location, Template, API]
@@ -94,7 +95,7 @@ data:
         providers:
           keycloakOrg:
             default:
-              baseUrl: ${KEYCLOAK_BASE_URL}/auth
+              baseUrl: ${KEYCLOAK_BASE_URL}
               loginRealm: ${KEYCLOAK_REALM}
               realm: ${KEYCLOAK_REALM}
               clientId: ${KEYCLOAK_CLIENT_ID}
