--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -105,6 +105,13 @@ data:
               timeout: { minutes: 1 }
               initialDelay: { seconds: 15 }
 
+    permission:
+      enabled: true
+      rbac:
+        admin:
+          users:
+            - name: user:default/homelab-admin
+
     backend:
       auth:
         keys:
