--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -109,7 +109,7 @@ data:
       enabled: true
       rbac:
         admin:
-          users:
+          superUsers:
             - name: user:default/homelab-admin
 
     backend:
