Add rbac plugin.

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -84,7 +84,7 @@ data:
               resolvers:
                 - resolver: preferredUsernameMatchingUserEntityName
 
-    dangerouslyAllowSignInWithoutUserInCatalog: false
+    dangerouslyAllowSignInWithoutUserInCatalog: true
 
     catalog:
       rules:
@@ -109,7 +109,7 @@ data:
       enabled: true
       rbac:
         admin:
-          superUsers:
+          users:
             - name: user:default/homelab-admin
 
     backend:
