--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -108,6 +108,7 @@ data:
     permission:
       enabled: true
       rbac:
+        policies-csv-file: ./rbac-policy.csv
         admin:
           users:
             - name: user:default/homelab-admin
