--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/rbac-policy-cm.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/rbac-policy-cm.yaml
@@ -10,6 +10,7 @@ data:
     p, role:default/developer, topology.view.read, read, allow
     # Team Lead 
     p, role:default/teamlead, catalog.entity.read, read, allow
+    p, role:default/teamlead, catalog.entity.create, create, allow
     p, role:default/teamlead, catalog.location.read, read, allow
     p, role:default/teamlead, topology.view.read, read, allow
     p, role:default/teamlead, scaffolder.action.execute, use, allow
