--- a/gitops/cluster-config/openshift-gitops/instances/cluster/kustomization.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: openshift-gitops
 
 resources:
   #- openshift-gitops-extended-clusterrole.yaml
+  - azure-repos-externalsecret.yaml
   - openshift-gitops-admins-group.yaml
   - openshift-gitops-extended-clusterrolebinding.yaml
   - argocd.yaml
