--- a/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
@@ -13,8 +13,9 @@ spec:
     kind: ClusterSecretStore
   target:
     template:
-      type: git
-      url: https://dev.azure.com
+      stringData:
+        type: git
+        url: https://dev.azure.com
       data:
         username: pittar-demo
         password: "{{ .personalAccessToken | toString }}"
