--- a/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
@@ -13,10 +13,9 @@ spec:
     kind: ClusterSecretStore
   target:
     template:
-      stringData:
-        type: git
-        url: https://dev.azure.com
       data:
+        type: Z2l0Cg==
+        url: aHR0cHM6Ly9kZXYuYXp1cmUuY29tCg==
         username: pittar-demo
         password: "{{ .personalAccessToken | toString }}"
     creationPolicy: Owner
