--- a/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
@@ -13,9 +13,11 @@ spec:
     kind: ClusterSecretStore
   target:
     template:
+      labels:
+        argocd.argoproj.io/secret-type: repo-creds
       data:
-        type: Z2l0Cg==
-        url: aHR0cHM6Ly9kZXYuYXp1cmUuY29tCg==
+        type: git
+        url: https://dev.azure.com
         username: pittar-demo
         password: "{{ .personalAccessToken | toString }}"
     creationPolicy: Owner
