Add secret labels

--- a/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
@@ -13,8 +13,9 @@ spec:
     kind: ClusterSecretStore
   target:
     template:
-      labels:
-        argocd.argoproj.io/secret-type: repo-creds
+      metadata:
+        labels:
+          argocd.argoproj.io/secret-type: repo-creds
       data:
         type: git
         url: https://dev.azure.com
