--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -26,7 +26,7 @@ data:
         - type: 'config'
           instances:
             - name: openshift-gitops
-              url: https://openshift-gitops-server-openshift-gitops.apps-crc.testing
+              url: https://openshift-gitops-server-openshift-gitops.apps.lab.pitt.ca
               username: ${ARGOCD_ADMIN_USER}
               password: ${ARGOCD_ADMIN_PASSWORD}
 
