Update external secrets cred

--- a/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
+++ b/gitops/cluster-config/openshift-gitops/instances/cluster/azure-repos-externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
           argocd.argoproj.io/secret-type: repo-creds
       data:
         type: git
-        url: https://pittar-demos@dev.azure.com
+        url: https://dev.azure.com
         username: pittar-demo
         password: "{{ .personalAccessToken | toString }}"
     creationPolicy: Owner
