--- a/gitops/cluster-services/openshift-pipelines/operator/subscription.yaml
+++ b/gitops/cluster-services/openshift-pipelines/operator/subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: openshift-pipelines-operator
   namespace: openshift-operators
 spec:
-  channel: patch-me-see-overlays-dir
+  channel: pipelines-1.16
   installPlanApproval: Automatic
   name: openshift-pipelines-operator-rh
   source: redhat-operators
