--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -17,8 +17,11 @@ spec:
         - name: ado-secrets
         - name: rhsso-secret
       envs:
-        - name: LOG_LEVEL
-          value: debug
+        # Only needed because gitea uses a self-signed cert.
+        - name: NODE_TLS_REJECT_UNAUTHORIZED
+          value: "0"
+        # - name: LOG_LEVEL
+        #   value: debug
     extraFiles:
       mountPath: /opt/app-root/src
       configMaps:
