--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/dynamic-plugins-rhdh.yaml
@@ -31,6 +31,8 @@ data:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-azure-dynamic 
         disabled: false
+      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-topology 
+        disabled: false      
       # - package: ./dynamic-plugins/dist/parfuemerie-douglas-scaffolder-backend-module-azure-repositories
       #   disabled: false
       # - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic
