--- a/rhacm/init-policies/kustomization.yaml
+++ b/rhacm/init-policies/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
+  #- managedclustersetbinding.yaml
   - custom-policies-namespace.yaml
   - openshift-gitops-operator
   - hub-bootstrap
