--- a/rhacm/init-policies/hub-bootstrap/hub-bootstrap-policy.yaml
+++ b/rhacm/init-policies/hub-bootstrap/hub-bootstrap-policy.yaml
@@ -53,7 +53,7 @@ spec:
                   destination:
                     namespace: openshift-gitops
                     server: https://kubernetes.default.svc
-                  project: bootstrap
+                  project: cluster-bootstrap
                   source:
                     path: rhacm/policies
                     repoURL: https://github.com/pittar/homelab.git
