--- a/rhacm/init-policies/openshift-gitops-operator/operator-policy.yaml
+++ b/rhacm/init-policies/openshift-gitops-operator/operator-policy.yaml
@@ -27,6 +27,21 @@ spec:
                   labels:
                     openshift.io/cluster-monitoring: "true"
                   name: openshift-gitops-operator
+            - complianceType: musthave
+              objectDefinition:
+                kind: ClusterRoleBinding
+                apiVersion: rbac.authorization.k8s.io/v1
+                metadata:
+                  name: openshift-gitops-extended-clusterrolebinding
+                roleRef:
+                  apiGroup: rbac.authorization.k8s.io
+                  kind: ClusterRole
+                  name: cluster-admin
+                  #name: openshift-gitops-extended-clusterrole
+                subjects:
+                  - kind: ServiceAccount
+                    name: openshift-gitops-argocd-application-controller
+                    namespace: openshift-gitops
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
