--- a/rhacm/policies/openshift-pipelines-operator/pipelines-operator-policy.yaml
+++ b/rhacm/policies/openshift-pipelines-operator/pipelines-operator-policy.yaml
@@ -27,7 +27,7 @@ spec:
             source: redhat-operators
             sourceNamespace: openshift-marketplace
           versions:
-            - v1.16.1
+            - openshift-pipelines-operator-rh.v1.16.1
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
