--- a/rhacm/init-policies/hub-bootstrap/global-policyset.yaml
+++ b/rhacm/init-policies/hub-bootstrap/global-policyset.yaml
@@ -7,6 +7,7 @@ spec:
   description: Global cluster policies.
   policies:
     - policy-openshift-gitops-operator
+    - external-secrets-operator
 ---
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
