Update external secrets

--- a/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -11,6 +11,21 @@ spec:
   disabled: false
   policy-templates:
     - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: external-secrets-namespace
+        spec:
+          remediationAction: inform
+          severity: high
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                  apiVersion: v1                    
+                  kind: Namespace
+                  metadata:
+                    name: external-secrets
+    - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
         metadata:
