--- a/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -25,16 +25,16 @@ spec:
                   kind: Namespace
                   metadata:
                     name: external-secrets
-    - objectDefinition:
-        apiVersion: v1
-        kind: Secret
-        metadata:
-          name: eso-token-cluster-homelab
-          namespace: external-secrets
-        type: Opaque
-        data:
-          dopplerToken: |
-            {{hub fromSecret "shared-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}
+    # - objectDefinition:
+    #     apiVersion: v1
+    #     kind: Secret
+    #     metadata:
+    #       name: eso-token-cluster-homelab
+    #       namespace: external-secrets
+    #     type: Opaque
+    #     data:
+    #       dopplerToken: |
+    #         {{hub fromSecret "shared-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
@@ -53,20 +53,20 @@ spec:
             sourceNamespace: openshift-marketplace
           versions:
             - external-secrets-operator.v0.11.0
-    - objectDefinition:
-        apiVersion: external-secrets.io/v1beta1
-        kind: ClusterSecretStore
-        metadata:
-          name: doppler
-        spec:
-          provider:
-            doppler:
-              auth:
-                secretRef:
-                  dopplerToken:
-                    name: eso-token-cluster-homelab
-                    key: dopplerToken
-                    namespace: external-secrets
+    # - objectDefinition:
+    #     apiVersion: external-secrets.io/v1beta1
+    #     kind: ClusterSecretStore
+    #     metadata:
+    #       name: doppler
+    #     spec:
+    #       provider:
+    #         doppler:
+    #           auth:
+    #             secretRef:
+    #               dopplerToken:
+    #                 name: eso-token-cluster-homelab
+    #                 key: dopplerToken
+    #                 namespace: external-secrets
 
 # ---
 # apiVersion: policy.open-cluster-management.io/v1
