--- a/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -25,16 +25,15 @@ spec:
                   kind: Namespace
                   metadata:
                     name: external-secrets
-    # - objectDefinition:
-    #     apiVersion: v1
-    #     kind: Secret
-    #     metadata:
-    #       name: eso-token-cluster-homelab
-    #       namespace: external-secrets
-    #     type: Opaque
-    #     data:
-    #       dopplerToken: |
-    #         {{hub fromSecret "shared-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}
+    - objectDefinition:
+        apiVersion: v1
+        kind: Secret
+        metadata:
+          name: eso-token-cluster-homelab
+          namespace: external-secrets
+        type: Opaque
+        data:
+          dopplerToken: {{hub fromSecret "shared-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
