--- a/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/rhacm/policies/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -33,7 +33,7 @@ spec:
           namespace: external-secrets
         type: Opaque
         data:
-          dopplerToken: '{{hub fromSecret "shared-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}'
+          dopplerToken: '{{hub fromSecret "external-secrets" "doppler-token" "dopplerToken" hub}}'
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
