--- a/gitops/argocd/rhacm/policies/kustomization.yaml
+++ b/gitops/argocd/rhacm/policies/kustomization.yaml
@@ -2,12 +2,12 @@ namespace: openshift-gitops
 
 resources:
   - cluster-services-project.yaml
-  - ../../../cluster-services/rhsso/operator
-  - ../../../cluster-services/rhsso/instance
-  - ../../../cluster-services/redhat-developer-hub/operator
-  - ../../../cluster-services/redhat-developer-hub/instance
-  - ../../../cluster-services/devspaces/operator
-  - ../../../cluster-services/devspaces/instance
-  - ../../../cluster-services/openshift-pipelines/operator
-  - ../../../cluster-services/openshift-virt/operator
-  - ../../../cluster-services/openshift-virt/instance
+  # - ../../../cluster-services/rhsso/operator
+  # - ../../../cluster-services/rhsso/instance
+  # - ../../../cluster-services/redhat-developer-hub/operator
+  # - ../../../cluster-services/redhat-developer-hub/instance
+  # - ../../../cluster-services/devspaces/operator
+  # - ../../../cluster-services/devspaces/instance
+  # - ../../../cluster-services/openshift-pipelines/operator
+  # - ../../../cluster-services/openshift-virt/operator
+  # - ../../../cluster-services/openshift-virt/instance
