--- a/bootstrap/init/rhacm-postinstall/namespaces/acm-prime-policies-namespace.yaml
+++ b/bootstrap/init/rhacm-postinstall/namespaces/acm-prime-policies-namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
-  name: acm-global-policies
+  name: acm-prime-policies
