--- a/gitops/argocd/rhacm/bootstrap/kustomization.yaml
+++ b/gitops/argocd/rhacm/bootstrap/kustomization.yaml
@@ -1,4 +1,8 @@
 namespace: openshift-gitops
 
 resources:
+  - rhacm-project.yaml
+  - ../managedclustersets 
+  - ../managedclustersetbindings 
   - ../policies
+  - ../policysets
