--- a/gitops/argocd/rhacm/bootstrap/rhacm-project.yaml
+++ b/gitops/argocd/rhacm/bootstrap/rhacm-project.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  name: cluster-services
+  name: rhacm
 spec:
   clusterResourceWhitelist:
   - group: '*'
