--- a/gitops/rhacm/policies/prime/gitops-bootstrap/bootstrap-gitops-policy.yaml
+++ b/gitops/rhacm/policies/prime/gitops-bootstrap/bootstrap-gitops-policy.yaml
@@ -48,6 +48,7 @@ spec:
                     gitops.ownedBy: openshift-gitops
                     app.type: bootstrap
                   name: rhacm-boostrap
+                  namespace: openshift-gitops
                 spec:
                   destination:
                     namespace: openshift-gitops
