--- a/gitops/rhacm/policysets/prime/kustomization.yaml
+++ b/gitops/rhacm/policysets/prime/kustomization.yaml
@@ -1,6 +1,7 @@
 namespace: acm-prime-policies
 
 resources:
+  - namespace.yaml
   - prime-policyset.yaml
   - prime-policyset-placement.yaml
   - prime-policyset-placementbinding.yaml
