--- a/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -24,6 +24,8 @@ spec:
                   apiVersion: v1                    
                   kind: Namespace
                   metadata:
+                    labels:
+                      argocd.argoproj.io/managed-by: openshift-gitops
                     name: external-secrets
     # - objectDefinition:
     #     apiVersion: v1
