--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -7,4 +7,5 @@ metadata:
 spec:
   description: Prime cluster policies.
   policies:
-    - bootstrap-gitops
+    - bootstrap-rhacm-gitops
+    - bootstrap-openshift-gitops
