Add namespace to gitops bootstrap app

--- a/gitops/rhacm/policies/prime/gitops-bootstrap/bootstrap-openshift-gitops-policy.yaml
+++ b/gitops/rhacm/policies/prime/gitops-bootstrap/bootstrap-openshift-gitops-policy.yaml
@@ -48,6 +48,7 @@ spec:
                     gitops.ownedBy: openshift-gitops
                     app.type: bootstrap
                   name: cluster-bootstrap
+                  namespace: openshift-gitops
                 spec:
                   destination:
                     namespace: openshift-gitops
