Add hub template options

--- a/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -9,6 +9,8 @@ metadata:
 spec:
   remediationAction: enforce
   disabled: false
+  hubTemplateOptions:
+    serviceAccountName: prime
   policy-templates:
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
